2010-03-27	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* network/smsc9218i.c tests/tests.c: Removed warnings

2010-03-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, confiugre.ac, include/bsp.h, startup/bspstart.c,
	startup/start.S:
	add support for GW_LCFM mpc551x based system

2009-10-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am: Update for exception support changes.
	* startup/bspstart.c: Changed exception header file includes.  Update
	for ppc_exc_initialize() changes.

2009-10-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* network/smsc9218i.c, tests/tests.c: Update for interrupt handler
	type change.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mpc55xx.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mpc5566evb.cfg: New (relocated from /make/custom).
	* make/custom/mpc55xx.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-09-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1435/bsps
	* Makefile.am: Use shared implementation of bsp_idle_thread().
	* startup/bspidle.c: Removed.

2009-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, startup/bspstart.c: Rename BSP specific idle thread to
	bsp_idle_thread and split into its own file.
	* startup/bspidle.c: New file.

2009-07-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* clock/clock-config.c, include/smsc9218i.h, network/smsc9218i.c: New
	files.
	* network/network.c: Removed file.
	* Makefile.am, README, bsp_specs, preinstall.am, include/bsp.h,
	startup/bspstart.c, startup/sd-card-init.c, tests/tests.c: Changes
	throughout.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to