@@ -41,6 +41,7 @@
 
 #undef USE_DSPI_READER_WRITER
 
+#if defined(USE_DSPI_READER_WRITER)
 static rtems_driver_address_table test_mpc55xx_drv_ops = {
 	initialization_entry : NULL,
 	open_entry : NULL,
@@ -54,6 +55,7 @@ static rtems_libi2c_drv_t test_mpc55xx_dspi_drv = {
 	ops : &test_mpc55xx_drv_ops,
 	size : sizeof( rtems_libi2c_drv_t)
 };
+#endif /* defined(USE_DSPI_READER_WRITER) */
 
 #define MPC55XX_TEST_DSPI_ADDRESS 0
 
@@ -71,13 +73,13 @@ static rtems_id test_mpc55xx_dspi_ping;
 
 static rtems_id test_mpc55xx_dspi_pong;
 
+#if defined(USE_DSPI_READER_WRITER)
 static unsigned char test_mpc55xx_dspi_writer_outbuf [2] [MPC55XX_TEST_DSPI_BUFSIZE_CACHE_PROOF] __attribute__ ((aligned (32)));
 
 static unsigned char test_mpc55xx_dspi_writer_inbuf [MPC55XX_TEST_DSPI_BUFSIZE_CACHE_PROOF] __attribute__ ((aligned (32)));
 
 static unsigned char test_mpc55xx_dspi_reader_inbuf [MPC55XX_TEST_DSPI_BUFSIZE_CACHE_PROOF] __attribute__ ((aligned (32)));
 
-#if defined(USE_DSPI_READER_WRITER)
 static rtems_task test_mpc55xx_dspi_writer( rtems_task_argument arg)
 {
 	rtems_status_code sc = RTEMS_SUCCESSFUL;
@@ -554,6 +556,7 @@ rtems_task test_sd_card( rtems_task_argument arg)
 static char inbuf [BUFSIZE];
 static char outbuf [BUFSIZE];
 
+#if 0
 static void test_mpc55xx_edma_done( mpc55xx_edma_channel_entry *e, uint32_t error_status)
 {
 	rtems_semaphore_release( e->id);
@@ -623,6 +626,7 @@ static rtems_status_code test_mpc55xx_edma(void)
 
 	return RTEMS_SUCCESSFUL;
 }
+#endif /* 0 */
 
 #include <stdlib.h>
 
